Fix truncated schedule
Currently, the truncated schedule method does not correctly list the
user's schedule for the next specified number of days. Instead, it lists
the next specified number of items on the user's schedule.

This commit fixes the aforementioned bug.

--- a/src/main/resources/view/ScheduleWindow.css
+++ b/src/main/resources/view/ScheduleWindow.css
@@ -1,19 +1,19 @@
-#copyButton, #scheduleMessage {
-    -fx-text-fill: white;
-}
+/*#copyButton, #scheduleMessage {*/
+/*    -fx-text-fill: white;*/
+/*}*/
 
-#copyButton {
-    -fx-background-color: dimgray;
-}
+/*#copyButton {*/
+/*    -fx-background-color: dimgray;*/
+/*}*/
 
-#copyButton:hover {
-    -fx-background-color: gray;
-}
+/*#copyButton:hover {*/
+/*    -fx-background-color: gray;*/
+/*}*/
 
-#copyButton:armed {
-    -fx-background-color: darkgray;
-}
+/*#copyButton:armed {*/
+/*    -fx-background-color: darkgray;*/
+/*}*/
 
-#helpMessageContainer {
+#scheduleMessageContainer {
     -fx-background-color: derive(#1d1d1d, 20%);
 }
